# QuantFinanceProjects

./: .gitignore  CLAUDE.md  generate_notebooks.py  requirements.txt  sync_metrics.py
portfolio_projects/alpharank/: README.md  model_card.yaml  pyproject.toml  requirements.txt  results.yaml  run_pipeline.py
portfolio_projects/alpharank/configs/: alpharank_config.yml
portfolio_projects/alpharank/reports/: RESULTS.md
portfolio_projects/alpharank/src/alpharank/: __init__.py
portfolio_projects/alpharank/src/alpharank/analytics/: __init__.py  attribution.py  ic.py  ic_decay.py
portfolio_projects/alpharank/tests/: conftest.py  test_analytics.py  test_features.py  test_integration.py  test_labels.py  test_models.py  test_portfolio_construction.py  test_synthetic.py  test_validation.py
portfolio_projects/defiregimenet/: README.md  model_card.yaml  pyproject.toml  requirements.txt  results.yaml  run_pipeline.py
portfolio_projects/defiregimenet/configs/: params.yml
portfolio_projects/defiregimenet/reports/: summary.md
portfolio_projects/defiregimenet/src/defiregimenet/: __init__.py  labels.py  pipeline.py
portfolio_projects/defiregimenet/tests/: conftest.py  test_api.py  test_classifiers.py  test_cross_token.py  test_cv_evaluator.py  test_diagnostics.py  test_features.py  test_forecast.py  test_labels.py  test_pipeline.py  test_regime.py  test_report.py  test_synthetic.py
portfolio_projects/macroregime/: README.md  model_card.yaml  pyproject.toml  requirements.txt  results.yaml  run_macroregime.py
portfolio_projects/macroregime/configs/: release_calendar.yml  strategy_params.yml
portfolio_projects/macroregime/reports/: summary.md
portfolio_projects/macroregime/src/macroregime/: __init__.py  evaluation.py  pipeline.py
portfolio_projects/macroregime/tests/: conftest.py  test_allocation.py  test_benchmarks.py  test_integration.py  test_macro_data.py  test_market_features.py  test_regimes.py  test_synthetic_macro.py
portfolio_projects/qbacktest/: README.md  model_card.yaml  pyproject.toml  requirements.txt  results.yaml  run_demo.py
portfolio_projects/qbacktest/configs/: backtest_config.yml
portfolio_projects/qbacktest/examples/: demo_ma_strategy.py
portfolio_projects/qbacktest/src/qbacktest/: __init__.py  engine.py  events.py
portfolio_projects/qbacktest/src/qbacktest/data/: base.py  (+3 more)
portfolio_projects/qbacktest/tests/: conftest.py  test_data.py  test_determinism.py  test_engine.py  test_events.py  test_execution.py  test_metrics.py  test_packaging.py  test_portfolio.py  test_risk.py  test_synthetic.py  test_tearsheet.py  test_walk_forward.py
portfolio_projects/volsurfacelab/: README.md  model_card.yaml  pyproject.toml  requirements.txt  results.yaml  run_pipeline.py
portfolio_projects/volsurfacelab/configs/: volsurfacelab.yaml
portfolio_projects/volsurfacelab/reports/: summary.md
portfolio_projects/volsurfacelab/src/volsurfacelab/: __init__.py  chain.py  forecast.py  iv_solver.py  pipeline.py  report.py  strategy.py  svi.py
portfolio_projects/volsurfacelab/tests/: conftest.py  test_api.py  test_chain.py  test_forecast.py  test_integration.py  test_iv_solver.py  test_pipeline.py  test_report.py  test_strategy.py  test_svi.py
(+758 files in other folders)
