[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "defiregimenet"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.1,<3.0",
    "scipy>=1.10",
    "scikit-learn>=1.7",
    "xgboost>=3.0",
    "hmmlearn>=0.3",
    "skfolio>=0.20",
    "arch>=7.0",
    "statsmodels>=0.14",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
real-data = ["ccxt>=4.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/defiregimenet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error::FutureWarning"]
