[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "macroregime"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.1,<3.0",
    "scipy>=1.10",
    "scikit-learn>=1.5",
    "hmmlearn>=0.3",
    "skfolio>=0.20",
    "statsmodels>=0.14",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pyyaml>=6.0",
    "qbacktest>=0.1",
]

[project.optional-dependencies]
real-data = ["fredapi>=0.5"]

[tool.hatch.build.targets.wheel]
packages = ["src/macroregime"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error::FutureWarning"]
