[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qbacktest"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["numpy>=2.2.6", "pandas>=2.3.0", "matplotlib>=3.7", "scipy>=1.11", "pyyaml>=6.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/qbacktest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error::FutureWarning"]
