[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "volsurfacelab"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.1,<3.0",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "arch>=7.0",
    "py-vollib>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
real-data = ["yfinance>=0.2"]

[tool.hatch.build.targets.wheel]
packages = ["src/volsurfacelab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error::FutureWarning"]
